fix: z-index footer to show all calendar

--- a/codigo/post/public/assets/css/habit.css
+++ b/codigo/post/public/assets/css/habit.css
@@ -203,7 +203,7 @@ main{
 }
 
 .footer-gradient {
-    /* z-index: -1;*/
+     z-index: -1;
      position: fixed;
      width: 100%;
      height: 20vh;
